Test Mobile Letter Spacing Fix

--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -1,6 +1,8 @@
 h1, h2, h3, h4, h5, h6 {
     color: #444444;
     font-family: 'Avalon', sans-serif;
+    font-weight: 700;
+    font-weight: bold;
     margin-top: 0px;
     margin-bottom: 10px;
     -moz-osx-font-smoothing: grayscale;
@@ -10,11 +12,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1, h2 {
-    letter-spacing: -1px;
+    letter-spacing: -0.063em;
 }
 
 h3, h4, h5, h6 {
-    letter-spacing: 0px;
+    letter-spacing: 0em;
 }
 
 h1 {
